tests/sumo/errors/routes/disconnected_off_customTeleport/errors.sumo.meso
Warning: Teleporting vehicle '0'; waited too long (disconnected), from edge 'beg':4 to edge 'end':0, time=37.99.
